crates/uitest/fixtures/ty_check/where_const_predicate_bool_capability.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/where_const_predicate_bool_capability.fe
---
error[8-0085]: const predicate is not satisfied
   ┌─ where_const_predicate_bool_capability.fe:30:5
   │
30 │     storage_only<PureMemory>()
   │     ^^^^^^^^^^^^^^^^^^^^^^^^ const predicate evaluated to `false` here
   │
   = const predicates must be proven by an assumption or by CTFE evaluating to `true`
